syntax = "proto3";

package io.anemos;

import "google/protobuf/descriptor.proto";


extend google.protobuf.MessageOptions {
    TestOption test_option = 66666667;
}

message TestOption {
    string string = 1;
    repeated string repeated_string = 2;

    int32 int32 = 3;
    repeated int32 repeated_int32 = 4;

    int64 int64 = 5;

}